{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 121,
  "lineage": "f6c648a2-30b1-803d-82e4-b7b7b2b42eee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-0e420264c029ec297",
            "description": "Allowing Internet Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e420264c029ec297",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ac-terraform-202206-demo-sg_public",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ac-terraform-202206-demo-sg_public"
            },
            "tags_all": {
              "Name": "ac-terraform-202206-demo-sg_public",
              "Owner": "cristian.rm",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b412b2df24f66d0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_sns.aws_eip.tf_eip",
            "module.vpc_sns.aws_internet_gateway.tf_igw",
            "module.vpc_sns.aws_nat_gateway.tf_vpc_nat",
            "module.vpc_sns.aws_route_table.pri-route",
            "module.vpc_sns.aws_route_table.pub-route",
            "module.vpc_sns.aws_route_table_association.aws_rt_association",
            "module.vpc_sns.aws_route_table_association.aws_rt_association2",
            "module.vpc_sns.aws_subnet.pri-sub",
            "module.vpc_sns.aws_subnet.tf_pub-sn",
            "module.vpc_sns.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"one\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-0b9cd7cea1c12d14e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9cd7cea1c12d14e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ac_ups_terraform_202206",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-008c55da48a992e91",
            "private_dns": "ip-10-10-0-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.93",
            "public_ip": "3.235.164.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00e995f67ddf3235f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac378513368851a3",
            "tags": {
              "Name": "instance-one"
            },
            "tags_all": {
              "Name": "instance-one",
              "Owner": "cristian.rm",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "instance-one"
            },
            "vpc_security_group_ids": [
              "sg-0e420264c029ec297"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public",
            "data.aws_ami.amazon-linux-2",
            "module.vpc_sns.aws_subnet.tf_pub-sn"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"three\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-0bc213ebcfec75dd6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc213ebcfec75dd6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ac_ups_terraform_202206",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-07e37a458497a8fa5",
            "private_dns": "ip-10-10-2-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.159",
            "public_ip": "3.235.104.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b3a011c7dee76ee6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac378513368851a3",
            "tags": {
              "Name": "instance-three"
            },
            "tags_all": {
              "Name": "instance-three",
              "Owner": "cristian.rm",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "instance-three"
            },
            "vpc_security_group_ids": [
              "sg-0e420264c029ec297"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public",
            "data.aws_ami.amazon-linux-2",
            "module.vpc_sns.aws_subnet.tf_pub-sn"
          ]
        }
      ]
    },
    {
      "module": "module.ec2[\"two\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-0de8d8c71b998d1ae",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de8d8c71b998d1ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ac_ups_terraform_202206",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-03cd4b965eb36b010",
            "private_dns": "ip-10-10-1-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.207",
            "public_ip": "44.192.5.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d0dfbcf2c59f0d8e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ac378513368851a3",
            "tags": {
              "Name": "instance-two"
            },
            "tags_all": {
              "Name": "instance-two",
              "Owner": "cristian.rm",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "instance-two"
            },
            "vpc_security_group_ids": [
              "sg-0e420264c029ec297"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_public",
            "data.aws_ami.amazon-linux-2",
            "module.vpc_sns.aws_subnet.tf_pub-sn"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_sns",
      "mode": "managed",
      "type": "aws_eip",
      "name": "tf_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b34bf349c5dd0559",
            "association_id": "eipassoc-0ad9ea3729ab91d3f",
            "domain": "vpc",
            "id": "eipalloc-0b34bf349c5dd0559",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05c6e16be5dbc89b1",
            "private_dns": "ip-10-10-5-94.ec2.internal",
            "private_ip": "10.10.5.94",
            "public_dns": "ec2-44-208-123-95.compute-1.amazonaws.com",
            "public_ip": "44.208.123.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ac-terraform-202206-demo-eip_nat"
            },
            "tags_all": {
              "Name": "ac-terraform-202206-demo-eip_nat",
              "Owner": "cristian.rm",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_sns",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:internet-gateway/igw-0195dcd53e2527fb5",
            "id": "igw-0195dcd53e2527fb5",
            "owner_id": "509130302659",
            "tags": {
              "Name": "ac-terraform-202206-demo-vpc_igw"
            },
            "tags_all": {
              "Name": "ac-terraform-202206-demo-vpc_igw",
              "Owner": "cristian.rm",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "vpc_id": "vpc-0b412b2df24f66d0f"
          },
          "dependencies": [
            "module.vpc_sns.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_sns",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tf_vpc_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b34bf349c5dd0559",
            "connectivity_type": "public",
            "id": "nat-0b3179648c4e3162d",
            "network_interface_id": "eni-05c6e16be5dbc89b1",
            "private_ip": "10.10.5.94",
            "public_ip": "44.208.123.95",
            "subnet_id": "subnet-0ac378513368851a3",
            "tags": {
              "Name": "ac-terraform-202206-demo-vpc_nat"
            },
            "tags_all": {
              "Name": "ac-terraform-202206-demo-vpc_nat",
              "Owner": "cristian.rm",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            }
          },
          "dependencies": [
            "module.vpc_sns.aws_eip.tf_eip",
            "module.vpc_sns.aws_internet_gateway.tf_igw",
            "module.vpc_sns.aws_subnet.tf_pub-sn",
            "module.vpc_sns.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_sns",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:route-table/rtb-0b3771bcf3b496459",
            "id": "rtb-0b3771bcf3b496459",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b3179648c4e3162d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ac-terraform-202206-demo-priv_route"
            },
            "tags_all": {
              "Name": "ac-terraform-202206-demo-priv_route",
              "Owner": "cristian.rm",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b412b2df24f66d0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_sns.aws_nat_gateway.tf_vpc_nat",
            "module.vpc_sns.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_sns",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:route-table/rtb-0f4094172f542ad12",
            "id": "rtb-0f4094172f542ad12",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0195dcd53e2527fb5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ac-terraform-202206-demo-public_route"
            },
            "tags_all": {
              "Name": "ac-terraform-202206-demo-public_route",
              "Owner": "cristian.rm",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b412b2df24f66d0f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_sns.aws_internet_gateway.tf_igw",
            "module.vpc_sns.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_sns",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f618b5392848f693",
            "route_table_id": "rtb-0f4094172f542ad12",
            "subnet_id": "subnet-0ac378513368851a3"
          },
          "dependencies": [
            "module.vpc_sns.aws_internet_gateway.tf_igw",
            "module.vpc_sns.aws_route_table.pub-route",
            "module.vpc_sns.aws_subnet.tf_pub-sn",
            "module.vpc_sns.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_sns",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aws_rt_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0405265c76c928e3d",
            "route_table_id": "rtb-0b3771bcf3b496459",
            "subnet_id": "subnet-0ba17b3d35cdb4cec"
          },
          "dependencies": [
            "module.vpc_sns.aws_eip.tf_eip",
            "module.vpc_sns.aws_internet_gateway.tf_igw",
            "module.vpc_sns.aws_nat_gateway.tf_vpc_nat",
            "module.vpc_sns.aws_route_table.pri-route",
            "module.vpc_sns.aws_subnet.pri-sub",
            "module.vpc_sns.aws_subnet.tf_pub-sn",
            "module.vpc_sns.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_sns",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0ba17b3d35cdb4cec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba17b3d35cdb4cec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ac-terraform-202206-demo-priv-sub"
            },
            "tags_all": {
              "Name": "ac-terraform-202206-demo-priv-sub",
              "Owner": "cristian.rm",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "vpc_id": "vpc-0b412b2df24f66d0f"
          },
          "dependencies": [
            "module.vpc_sns.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_sns",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_pub-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0ac378513368851a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac378513368851a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509130302659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ac-terraform-202206-demo-pub-sub"
            },
            "tags_all": {
              "Name": "ac-terraform-202206-demo-pub-sub",
              "Owner": "cristian.rm",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            },
            "vpc_id": "vpc-0b412b2df24f66d0f"
          },
          "dependencies": [
            "module.vpc_sns.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_sns",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:vpc/vpc-0b412b2df24f66d0f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08f18a4abc0e28056",
            "default_route_table_id": "rtb-0afb4a53fc8fb4b93",
            "default_security_group_id": "sg-09b69144d17d995d1",
            "dhcp_options_id": "dopt-b99482db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b412b2df24f66d0f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0afb4a53fc8fb4b93",
            "owner_id": "509130302659",
            "tags": {
              "Name": "ac-terraform-202206-demo-vpc"
            },
            "tags_all": {
              "Name": "ac-terraform-202206-demo-vpc",
              "Owner": "cristian.rm",
              "cost:env": "academy",
              "cost:project": "ac-us-terraform-202206",
              "env": "ac-tr-202206"
            }
          }
        }
      ]
    }
  ]
}